--- a/Aufgaben/Aufgabe04/Style.css
+++ b/Aufgaben/Aufgabe04/Style.css
@@ -1,6 +1,6 @@
 body {
         font-family:  sans-serif;
-        margin-left: 20%;
+        margin-left: 25%;
         margin-right: 5%;
 }
 
@@ -16,6 +16,8 @@ h1  {
 h2{
 
     font-size: 5em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h1 span { /*das O im Icon*/
@@ -36,7 +38,7 @@ ul {
     height: 100%;
     overflow: auto;
     top: 00%;
-    width: 15%;
+    width: 15em;
     
    
     
@@ -112,8 +114,55 @@ div {
    max-width: 250px;
 }
 
+@media screen and (max-width: 1023px) {
+  body{
+
+    margin-left: 30%;
+  }
+  
+  h1 {
+    font-size: 2.5em;
+  }
+  h2{
+
+    font-size: 3em;
+}
+ul{
+
+  width: 10em;
+}
 
 
+
+
+
+
+}
+  
+  @media screen and (max-width: 600px) {
+    body{
+
+      margin-left: 35%;
+    }
+    
+    
+    h1 {
+      font-size: 2.5em;
+    }
+  
+    h2{
+
+      font-size: 2em;
+  }
+  
+  ul{
+
+    width: 10em;
+  }
+  
+  
+  
+  }
 
 
 
