--- a/Aufgaben/Aufgabe04/Style.css
+++ b/Aufgaben/Aufgabe04/Style.css
@@ -11,6 +11,7 @@ h1 {
   color: #5c82d9;
   text-shadow: rgba(0, 0, 0, 0.5) -1px 0, rgba(0, 0, 0, 0.3) 0 -1px, rgba(255, 255, 255, 0.5) 2px 2px, rgba(0, 0, 0, 0.3) -1px -2px;
   text-decoration: none;
+  padding: 5px;
 }
 
 h2 {
@@ -28,7 +29,7 @@ h1 span {
   text-shadow: 1px 1px black;
 }
 
-ul {
+header {
   left: 0%;
   padding: 0;
   background-color: #f1f1f1;
@@ -37,6 +38,16 @@ ul {
   overflow: auto;
   top: 00%;
   width: 15em;
+  
+}
+ul{
+padding: 5px;
+
+}
+li{
+
+  list-style: none;
+  
 }
 
 li a {
@@ -56,11 +67,16 @@ li a:hover:not(.active) {
   color: white;
 }
 
-ul>p>input {
+
+
+#Ware{
+
   position: relative;
   height: 7.5%;
   top: 0;
   left: 25%;
+  
+
 }
 
 ul>p>input:hover:not(.active) {
